fix hw-01 footnote

--- a/hw/hw-01.qmd
+++ b/hw/hw-01.qmd
@@ -2,6 +2,7 @@
 title: "HW 01: Simple linear regression"
 subtitle: Ice duration and air temperature in Madison, WI
 bibliography: references.bib
+suppress-bibliography: true
 ---
 
 ::: callout-important
