--- a/slides/lab-03.qmd
+++ b/slides/lab-03.qmd
@@ -38,11 +38,17 @@ bibliography: references.bib
 
 ## Icebreaker
 
+<br>
+
+::: question
+What is your favorite place to eat at Brodhead Center (West Union)?
+:::
+
 # Teams
 
 ## Meet your team!
 
--   [**Click here**](https://prodduke-my.sharepoint.com/:x:/g/personal/mt324_duke_edu/EWmBSHOfYhJLlxYJKEDFpT8BZNmQsC41rm4hA6uaOqrA1w?e=sUNxBJ) to find your team.
+-   [**Click**](https://prodduke-my.sharepoint.com/:x:/g/personal/mt324_duke_edu/EWmBSHOfYhJLlxYJKEDFpT8BZNmQsC41rm4hA6uaOqrA1w?e=sUNxBJ)[ **here**](https://prodduke-my.sharepoint.com/:x:/g/personal/mt324_duke_edu/EWmBSHOfYhJLlxYJKEDFpT8BZNmQsC41rm4hA6uaOqrA1w?e=sUNxBJ) to find your team.
 
 -   Sit with your team.
 
@@ -80,7 +86,7 @@ bibliography: references.bib
 countdown::countdown(minutes = 5, font_size = "2em")
 ```
 
-## Tips for working on a team {.midi}
+## Tips for working on a team
 
 -   Do not pressure each other to finish early; use the time wisely to really learn the material and produce a quality report.
 
