add feb 4 notes.

--- a/labs/lab-03.qmd
+++ b/labs/lab-03.qmd
@@ -279,7 +279,7 @@ If you haven't already, make sure you have completed the team agreement (see the
 :::
 
 ::: pull
-**All other team members**: Once Team Member 3 is done rendering, committing, and pushing, confirm that the changes are visible on GitHub in your team’s lab repo. Then, in RStudio, click the Pull button in the Git pane to get the updated document. You should see the final version of your .qmd file.
+**All other team members**: Once Team Member 2 is done rendering, committing, and pushing, confirm that the changes are visible on GitHub in your team’s lab repo. Then, in RStudio, click the Pull button in the Git pane to get the updated document. You should see the final version of your .qmd file.
 :::
 
 # Submission
@@ -297,6 +297,8 @@ To submit your assignment:
 -   Access Gradescope through the menu on the [STA 221 Canvas site.](https://canvas.duke.edu/courses/51767)
 
 -   Click on the assignment, and you’ll be prompted to submit it.
+
+- Select all team members’ names, so they receive credit on the assignment. Click here for video on adding team members to assignment on Gradescope.
 
 -   Mark the pages associated with each exercise. All of the pages of your lab should be associated with at least one question (i.e., should be “checked”).
 
