--- a/ae/ae-03-inference.qmd
+++ b/ae/ae-03-inference.qmd
@@ -1,7 +1,7 @@
 ---
 title: "AE 03: Inference"
 subtitle: "NCAA Football Expenditures"
-date: "Sep 19, 2024"
+date: "February 4 & 6, 2025"
 editor: visual
 ---
 
